<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContextSensor</string>
    
    <string name="aff_time">Time : </string>
    <string name="aff_longitude">Longitude : </string>
    <string name="aff_latitude">Latitude : </string>
    
    
    <string name="action_gps">GPS</string>
    <string name="action_network">Network</string>
    <string name="action_device">Device</string>
    <string name="action_settings">Settings</string>
    
    <string name="button_refresh">Refresh</string>
	<string name="no_notes">No wifi in range</string>
</resources>
